[tool.poetry]
name = "ip-link"
version = "0.4.1"
description = "Visualizing the relationships between different IP from network traffic capture."
authors = [
    "Cédric Bonhomme <cedric@cedricbonhomme.org>"
]
license = "GPL-3.0-or-later"

readme = "README.md"

homepage = "https://sr.ht/~cedric/ip-link"
repository = "https://git.sr.ht/~cedric/ip-link"
documentation = "https://ip-link.readthedocs.io"

keywords = ["network-traffic-capture", "pcap", "visualisation", "network"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Security",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"
]

packages = [
    { include = "ip-link" }
]

include = [
    "README.md",
    "NEWS.md",
    "COPYING",
    "AUTHORS",
    "COPYING",
    "bin/*",
    "docs/*"
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
networkx = "^3.2.1"
pypacker = "^5.4"
Pillow = "^10.2.0"
numpy = "^1.26.3"
matplotlib = "^3.8.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
strict_optional = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true

show_error_context = true
pretty = true

exclude = "docs|examples"
